--- a/app/app/src/main/res/layout-land/frag_join_room_menu.xml
+++ b/app/app/src/main/res/layout-land/frag_join_room_menu.xml
@@ -9,11 +9,11 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="360dp"
-        android:layout_height="265dp"
+        android:layout_width="291dp"
+        android:layout_height="194dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="29dp"
+        android:layout_marginTop="13dp"
         android:scaleType="fitXY"
         android:src="@drawable/game_art" />
 
@@ -21,9 +21,9 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/imageView2"
-        android:layout_marginTop="80dp"
         android:text="@string/insert_code"
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -32,16 +32,13 @@
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/field"
-        android:layout_width="wrap_content"
+        android:layout_width="475dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView2"
-        android:layout_centerInParent="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="29dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="28dp" />
-
+        android:layout_centerInParent="true"
+        android:layout_marginHorizontal="200dp" />
 
     <Button
         android:id="@+id/btn_join_room"
@@ -49,8 +46,6 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/field"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="@dimen/fab_margin"
         android:text="@string/enter_room"/>
-
-
 </RelativeLayout>
