--- a/app/app/src/main/res/layout-land/frag_bet.xml
+++ b/app/app/src/main/res/layout-land/frag_bet.xml
@@ -1,15 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@android:color/transparent">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <TextView
+    <TextView
             android:id="@+id/bet_ammount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -21,47 +17,55 @@
             android:textSize="50sp"
             android:textStyle="bold" />
 
-        <GridLayout
-            android:id="@+id/grid"
-            android:layout_width="match_parent"
+    <Button
+        android:id="@+id/ready_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/bet_ammount"
+        android:text="@string/ready" />
+
+
+    <GridLayout
+            android:id="@+id/chips_grid"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
             android:layout_alignParentBottom="true"
             android:layout_marginTop="0dp"
             android:useDefaultMargins="true">
 
             <ImageButton
                 android:id="@+id/poker_chip_5"
-                android:layout_width="95dp"
-                android:layout_height="95dp"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
                 android:background="@android:color/transparent"
                 android:scaleType="fitCenter"
                 app:srcCompat="@drawable/poker_chip_5" />
 
             <ImageButton
                 android:id="@+id/poker_chip_10"
-                android:layout_width="95dp"
-                android:layout_height="95dp"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
                 android:background="@android:color/transparent"
                 android:scaleType="fitCenter"
                 app:srcCompat="@drawable/poker_chip_10" />
 
             <ImageButton
                 android:id="@+id/poker_chip_50"
-                android:layout_width="95dp"
-                android:layout_height="95dp"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
                 android:background="@android:color/transparent"
                 android:scaleType="fitCenter"
                 app:srcCompat="@drawable/poker_chip_50" />
 
             <ImageButton
                 android:id="@+id/poker_chip_100"
-                android:layout_width="95dp"
-                android:layout_height="95dp"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
                 android:background="@android:color/transparent"
                 android:scaleType="fitCenter"
                 app:srcCompat="@drawable/poker_chip_100"/>
         </GridLayout>
 
-    </RelativeLayout>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
