--- a/app/app/src/main/res/layout/frag_bet.xml
+++ b/app/app/src/main/res/layout/frag_bet.xml
@@ -14,8 +14,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:layout_marginStart="174dp"
-            android:layout_marginBottom="8dp"
             android:text="0€"
             android:textColor="@color/white"
             android:textSize="50sp"
@@ -61,6 +59,15 @@
                 android:scaleType="fitCenter"
                 app:srcCompat="@drawable/poker_chip_100"/>
         </GridLayout>
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@id/bet_ammount"
+            android:layout_marginTop="10dp"
+            android:text="@string/ready" />
 
     </RelativeLayout>
 
