--- a/app/app/src/main/res/layout/activity_playroom.xml
+++ b/app/app/src/main/res/layout/activity_playroom.xml
@@ -4,12 +4,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/table_background"
+    app:navGraph="@navigation/nav_graph"
+
     >
 
-    <androidx.fragment.app.FragmentContainerView
+
+    <fragment
         android:id="@+id/fragment_container_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        app:defaultNavHost="true"
+        app:navGraph="@navigation/play_nav_graph"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
