--- a/app/app/src/main/res/layout/frag_bet.xml
+++ b/app/app/src/main/res/layout/frag_bet.xml
@@ -61,7 +61,7 @@
         </GridLayout>
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/button_ready"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
