--- a/app/app/src/main/res/layout/frag_welcome_menu.xml
+++ b/app/app/src/main/res/layout/frag_welcome_menu.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.WelcomeMenu"
+    tools:context=".views.fragments.WelcomeMenu"
     android:background="#E6E5E3">
 
 
