--- a/app/app/src/main/res/navigation/play_nav_graph.xml
+++ b/app/app/src/main/res/navigation/play_nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/Bet"
-        android:name="com.example.blackjack.fragments.Bet"
+        android:name="com.example.blackjack.views.fragments.Bet"
         tools:layout="@layout/frag_bet">
 
         <action
@@ -17,7 +17,7 @@
 
     <fragment
         android:id="@+id/Play"
-        android:name="com.example.blackjack.fragments.Play"
+        android:name="com.example.blackjack.views.fragments.Play"
         tools:layout="@layout/frag_play">
 
     </fragment>
