--- a/app/app/src/main/res/layout/frag_join_room_menu.xml
+++ b/app/app/src/main/res/layout/frag_join_room_menu.xml
@@ -31,7 +31,7 @@
 
 
     <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/field"
+        android:id="@+id/playroom_id_field"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView2"
@@ -47,7 +47,7 @@
         android:id="@+id/btn_join_room"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/field"
+        android:layout_below="@+id/playroom_id_field"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:text="@string/enter_room"/>
