--- a/app/app/src/main/res/layout/frag_play.xml
+++ b/app/app/src/main/res/layout/frag_play.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <include
+    <!--<include
         android:id="@+id/my_cards"
         layout="@layout/turn_cards"
         android:layout_width="200dp"
@@ -22,7 +22,21 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"/>
+        android:layout_marginTop="20dp"/>-->
+
+    <LinearLayout
+        android:id="@+id/my_cards"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="80dp"
+        android:elevation="0dp">
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view_cards"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
 
     <GridLayout
         android:layout_width="wrap_content"
