--- a/app/app/src/main/res/layout/frag_play.xml
+++ b/app/app/src/main/res/layout/frag_play.xml
@@ -6,23 +6,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!--<include
-        android:id="@+id/my_cards"
-        layout="@layout/turn_cards"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="80dp"/>
-
-    <include
-        android:id="@+id/adversary_cards"
-        layout="@layout/turn_cards"
-        android:layout_width="200dp"
+    <LinearLayout
+        android:id="@+id/opponent_cards"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"/>-->
+        android:layout_marginTop="10dp">
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view_cards_opponent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/my_cards"
@@ -30,8 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="80dp"
-        android:elevation="0dp">
+        android:layout_marginBottom="80dp">
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view_cards"
             android:layout_width="wrap_content"
@@ -91,7 +85,7 @@
             />
 
         <TextView
-            android:id="@+id/my_points"
+            android:id="@+id/my_score"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/fab_margin"
