--- a/app/app/src/main/res/layout/cards_list.xml
+++ b/app/app/src/main/res/layout/cards_list.xml
@@ -11,6 +11,6 @@
     <ImageView
         android:id="@+id/image"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/d2"
+        app:srcCompat="@drawable/_jspades"
         android:layout_width="wrap_content" />
 </androidx.cardview.widget.CardView>
