--- a/app/app/src/main/res/layout/frag_bet.xml
+++ b/app/app/src/main/res/layout/frag_bet.xml
@@ -1,22 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@android:color/transparent">
 
-    <RelativeLayout
+
+
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:id="@+id/loader"
+        android:orientation="vertical"
+        android:visibility="invisible"
+        >
+        <pl.droidsonroids.gif.GifImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="80dp"
+            android:src="@drawable/loader" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:textSize="30sp"
+            android:text="Waiting for your opponent..."
+            android:textStyle="bold"
+            android:layout_marginTop="-60dp"/>
+
+
+    </LinearLayout>
+
+    <ImageView
+        android:id="@+id/userBar"
+        android:layout_width="match_parent"
+        android:layout_height="68dp"
+        android:layout_marginStart="-20dp"
+        android:layout_marginEnd="-20dp"
+        android:layout_marginBottom="-5dp"
+        android:layout_alignParentBottom="true"
+        android:scaleType="fitXY"
+        app:srcCompat="@drawable/purple_frame" />
+
+    <TextView
+        android:id="@+id/username"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="20dp"
+        android:layout_marginBottom="15dp"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        android:textColor="@color/white"
+        android:text="user" />
+
+    <TextView
+        android:id="@+id/balance"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="15dp"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        android:textColor="@color/white" />
+
+    <RelativeLayout
+        android:id="@+id/bet_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="visible"
+        android:layout_above="@id/userBar">
+
+
 
         <TextView
             android:id="@+id/bet_amount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
+            android:text="@string/_0"
             android:textColor="@color/white"
             android:textSize="50sp"
-            android:text="@string/_0"
             android:textStyle="bold" />
 
         <GridLayout
@@ -24,7 +93,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_marginTop="0dp"
+            android:layout_marginTop="-5dp"
             android:useDefaultMargins="true">
 
             <ImageButton
@@ -57,22 +126,24 @@
                 android:layout_height="95dp"
                 android:background="@android:color/transparent"
                 android:scaleType="fitCenter"
-                app:srcCompat="@drawable/poker_chip_100"/>
+                app:srcCompat="@drawable/poker_chip_100" />
         </GridLayout>
 
         <GridLayout
             android:id="@+id/buttons_grid"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:useDefaultMargins="true"
             android:layout_below="@id/bet_amount"
-            android:layout_marginTop="10dp">
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10dp"
+            android:useDefaultMargins="true">
+
             <Button
                 android:id="@+id/btn_reset"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/reset" />
+
             <Button
                 android:id="@+id/btn_ready"
                 android:layout_width="wrap_content"
@@ -80,33 +151,8 @@
                 android:text="@string/ready" />
         </GridLayout>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_alignParentTop="true"
-            android:layout_marginTop="20dp"
-            android:layout_centerHorizontal="true"
-            >
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/balance"
-                android:textSize="25sp"
-                android:textStyle="bold"
-                android:textColor="@color/black"/>
-            <TextView
-                android:id="@+id/balance"
-                android:text=""
-                android:textSize="25sp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:textColor="@color/black"/>
-
-        </LinearLayout>
 
     </RelativeLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
