--- a/app/app/src/main/res/navigation/nav_graph.xml
+++ b/app/app/src/main/res/navigation/nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/WelcomeMenu">
+    app:startDestination="@id/Login">
 
     <fragment
         android:id="@+id/WelcomeMenu"
@@ -18,6 +18,16 @@
         android:id="@+id/JoinRoom"
         android:name="com.example.blackjack.views.fragments.JoinRoom"
         tools:layout="@layout/frag_join_room_menu">
+    </fragment>
+
+    <fragment
+        android:id="@+id/Login"
+        android:name="com.example.blackjack.views.fragments.Login"
+        tools:layout="@layout/frag_login_menu">
+
+        <action
+            android:id="@+id/action_login_to_welcome"
+            app:destination="@id/WelcomeMenu" />
     </fragment>
 
 
