--- a/app/app/src/main/res/layout/frag_create_room_menu.xml
+++ b/app/app/src/main/res/layout/frag_create_room_menu.xml
@@ -18,7 +18,7 @@
         android:src="@drawable/game_art" />
 
     <TextView
-        android:id="@+id/code"
+        android:id="@+id/playroom_id_field"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
@@ -36,7 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_below="@id/code"
+        android:layout_below="@id/playroom_id_field"
         android:layout_marginTop="10dp"
         android:text="Share this code with a friend"
         android:textSize="20sp"
