--- a/app/app/src/main/res/layout/frag_bet.xml
+++ b/app/app/src/main/res/layout/frag_bet.xml
@@ -24,11 +24,12 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:textSize="30sp"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="25sp"
             android:text="Waiting for your opponent..."
             android:textStyle="bold"
-            android:layout_marginTop="-60dp"/>
+            android:layout_marginTop="-30dp"/>
 
 
     </LinearLayout>
