--- a/app/app/src/main/res/layout/frag_create_room_menu.xml
+++ b/app/app/src/main/res/layout/frag_create_room_menu.xml
@@ -31,6 +31,19 @@
         android:textStyle="bold"/>
 
     <TextView
+        android:id="@+id/welcome"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="80dp"
+        android:layout_marginBottom="10dp"
+        android:textAlignment="center"
+        android:textStyle="italic"
+        android:textSize="20dp"
+        android:text="oi"
+        android:textColor="@color/black"
+        />
+
+    <TextView
         android:id="@+id/label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
