--- a/app/app/src/main/res/layout/frag_play.xml
+++ b/app/app/src/main/res/layout/frag_play.xml
@@ -169,6 +169,7 @@
         android:text="@string/opponents_turn"
         android:textSize="30sp"
         android:padding="@dimen/fab_margin"
+        android:visibility="invisible"
         android:background="@color/purple_700"
         android:textColor="@color/white"/>
 
