--- a/app/app/src/main/res/layout-land/frag_bet.xml
+++ b/app/app/src/main/res/layout-land/frag_bet.xml
@@ -1,71 +1,154 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@android:color/transparent">
 
-    <TextView
+
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:id="@+id/loader"
+        android:orientation="vertical"
+        android:visibility="invisible"
+        android:layout_marginBottom="30dp"
+        >
+        <pl.droidsonroids.gif.GifImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="80dp"
+            android:src="@drawable/loader" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="25sp"
+            android:text="Waiting for your opponent..."
+            android:textStyle="bold"
+            android:layout_marginTop="-30dp"/>
+
+
+    </LinearLayout>
+
+
+
+        <TextView
             android:id="@+id/bet_amount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_marginStart="174dp"
-            android:layout_marginBottom="8dp"
-            android:text="0€"
+            android:text="@string/_0"
             android:textColor="@color/white"
             android:textSize="50sp"
-            android:textStyle="bold" />
-
-    <Button
-        android:id="@+id/ready_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/bet_amount"
-        android:text="@string/ready" />
-
-
-    <GridLayout
-            android:id="@+id/chips_grid"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:textStyle="bold"
             android:layout_centerHorizontal="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginTop="0dp"
-            android:useDefaultMargins="true">
+            android:layout_marginTop="100dp"/>
+
+        <LinearLayout
+            android:id="@+id/chips_grid"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:useDefaultMargins="true"
+            android:gravity="center"
+            android:layout_above="@+id/userBar"
+            android:layout_marginBottom="-5dp">
 
             <ImageButton
                 android:id="@+id/poker_chip_5"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
                 android:background="@android:color/transparent"
                 android:scaleType="fitCenter"
                 app:srcCompat="@drawable/poker_chip_5" />
 
             <ImageButton
                 android:id="@+id/poker_chip_10"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
                 android:background="@android:color/transparent"
                 android:scaleType="fitCenter"
                 app:srcCompat="@drawable/poker_chip_10" />
 
             <ImageButton
                 android:id="@+id/poker_chip_50"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
                 android:background="@android:color/transparent"
                 android:scaleType="fitCenter"
                 app:srcCompat="@drawable/poker_chip_50" />
 
             <ImageButton
                 android:id="@+id/poker_chip_100"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
                 android:background="@android:color/transparent"
                 android:scaleType="fitCenter"
-                app:srcCompat="@drawable/poker_chip_100"/>
+                app:srcCompat="@drawable/poker_chip_100" />
+        </LinearLayout>
+
+        <GridLayout
+            android:id="@+id/buttons_grid"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/bet_amount"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="40dp"
+            android:useDefaultMargins="true">
+
+            <Button
+                android:id="@+id/btn_reset"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/reset" />
+
+            <Button
+                android:id="@+id/btn_ready"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/ready" />
         </GridLayout>
+
+        <ImageView
+            android:id="@+id/userBar"
+            android:layout_width="match_parent"
+            android:layout_height="68dp"
+            android:layout_marginStart="-50dp"
+            android:layout_marginEnd="-50dp"
+            android:layout_marginBottom="-5dp"
+            android:layout_alignParentBottom="true"
+            android:scaleType="fitXY"
+            app:srcCompat="@drawable/purple_frame" />
+
+        <TextView
+            android:id="@+id/username"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="20dp"
+            android:layout_marginBottom="15dp"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            android:text="oi"
+            android:textColor="@color/white" />
+
+        <TextView
+            android:id="@+id/balance"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="15dp"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            android:text="oi"
+            android:textColor="@color/white" />
+
+
 
 </RelativeLayout>
