--- a/app/app/src/main/res/layout-land/frag_login_menu.xml
+++ b/app/app/src/main/res/layout-land/frag_login_menu.xml
@@ -14,17 +14,19 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
-        android:src="@drawable/game_art" />
+        android:src="@drawable/game_art"
+        android:layout_margin="40dp"/>
 
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
+        android:layout_marginTop="30dp"
         android:layout_centerHorizontal="true"
         android:adjustViewBounds="true"
         android:scaleType="centerInside"
-        android:src="@drawable/title" />
+        android:src="@drawable/title_land" />
 
 
     <LinearLayout
@@ -34,42 +36,17 @@
         android:orientation="vertical"
         android:layout_marginHorizontal="50dp"
         android:layout_marginBottom="30dp"
-
+        android:gravity="center"
         >
 
-        <TextView
-            android:id="@+id/welcome"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="80dp"
-            android:layout_marginBottom="10dp"
-            android:textAlignment="center"
-            android:textStyle="bold"
-            android:textSize="20dp"
-            android:textColor="@color/black"
-            />
 
-        <Button
-            android:id="@+id/btn_join_room"
-            android:layout_width="match_parent"
+        <com.google.android.gms.common.SignInButton
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/enter_room" />
+            android:id="@+id/btn_login">
+        </com.google.android.gms.common.SignInButton>
 
-        <Button
-            android:id="@+id/btn_create_room"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/create_room" />
-
-        <Button
-            android:id="@+id/btn_logout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Logout">
-
-        </Button>
     </LinearLayout>
-
 
 
 
