--- a/app/app/src/main/res/layout-land/frag_welcome_menu.xml
+++ b/app/app/src/main/res/layout-land/frag_welcome_menu.xml
@@ -14,7 +14,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
-        android:src="@drawable/game_art" />
+        android:src="@drawable/game_art"
+        android:layout_margin="60dp"/>
 
     <ImageView
         android:id="@+id/imageView3"
@@ -24,47 +25,53 @@
         android:layout_centerHorizontal="true"
         android:adjustViewBounds="true"
         android:scaleType="centerInside"
-        android:src="@drawable/title" />
+        android:src="@drawable/title_land"
+        android:layout_marginTop="30dp"/>
 
+    <TextView
+        android:id="@+id/welcome"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="80dp"
+        android:layout_marginBottom="10dp"
+        android:textAlignment="center"
+        android:textStyle="bold"
+        android:textSize="20sp"
+        android:textColor="@color/black"
+        android:layout_above="@+id/buttons_grid"
+        />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:layout_marginHorizontal="50dp"
-        android:layout_marginBottom="30dp"
-
+        android:layout_marginBottom="20dp"
+        android:gravity="center"
+        android:id="@+id/buttons_grid"
         >
 
-        <TextView
-            android:id="@+id/welcome"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="80dp"
-            android:layout_marginBottom="10dp"
-            android:textAlignment="center"
-            android:textStyle="bold"
-            android:textSize="20dp"
-            android:textColor="@color/black"
-            />
 
         <Button
             android:id="@+id/btn_join_room"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
             android:text="@string/enter_room" />
 
         <Button
             android:id="@+id/btn_create_room"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
             android:text="@string/create_room" />
 
         <Button
             android:id="@+id/btn_logout"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
             android:text="Logout">
 
         </Button>
