--- a/app/app/src/main/res/layout/frag_bet.xml
+++ b/app/app/src/main/res/layout/frag_bet.xml
@@ -55,6 +55,7 @@
         android:layout_marginBottom="15dp"
         android:textSize="25sp"
         android:textStyle="bold"
+        android:text="oi"
         android:textColor="@color/white" />
 
     <TextView
@@ -67,6 +68,7 @@
         android:layout_marginBottom="15dp"
         android:textSize="25sp"
         android:textStyle="bold"
+        android:text="oi"
         android:textColor="@color/white" />
 
     <RelativeLayout
